Bug 160459 - Embedded formula's contents partly hidden by grey frame when in edit mode
Summary: Embedded formula's contents partly hidden by grey frame when in edit mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Formula-Object
  Show dependency treegraph
 
Reported: 2024-04-01 15:02 UTC by of88hlat
Modified: 2024-08-18 01:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample ODT (16.33 KB, application/vnd.oasis.opendocument.text)
2024-07-03 21:53 UTC, stragu
Details
screenshot of issue in LO 25.2 (3.68 KB, image/png)
2024-07-03 21:53 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description of88hlat 2024-04-01 15:02:30 UTC
Description:
Everytime I write an equation, there are big borders around it that obscure the equation, especially if I put a number to a power

Steps to Reproduce:
1.Create a math equation and notice it's obscured
2.
3.

Actual Results:
There are big gray borders around math equations that prevent me from seeing parts of the equation

Expected Results:
Nothing should be obscured


Reproducible: Always


User Profile Reset: Yes

Additional Info:
OnlyOffice has a good implementation of this feature
Comment 1 m_a_riosv 2024-04-02 01:17:14 UTC
Please attach a sample file, reduce the size as much as possible without private information, and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 2 stragu 2024-07-03 21:52:53 UTC
I see that an embedded formula in edit mode has a thick grey border that can partly overlap e.g. end subscripts or the bottom of a "j" letter.

Wondering if we could use a different padding by default to avoid that, but it actually feels like a regression: OOo 3.3 would draw the fonts neatly inside the thick frame, just like for its border in non-edit mode.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 70b3e128aef631e18e6451362c2e6315c28b857e
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 3 stragu 2024-07-03 21:53:22 UTC
Created attachment 195103 [details]
sample ODT
Comment 4 stragu 2024-07-03 21:53:57 UTC
Created attachment 195104 [details]
screenshot of issue in LO 25.2
Comment 5 Buovjaga 2024-08-12 14:28:44 UTC
(In reply to Stéphane Guillou (stragu) from comment #2)
> I see that an embedded formula in edit mode has a thick grey border that can
> partly overlap e.g. end subscripts or the bottom of a "j" letter.
> 
> Wondering if we could use a different padding by default to avoid that, but
> it actually feels like a regression: OOo 3.3 would draw the fonts neatly
> inside the thick frame, just like for its border in non-edit mode.
> 
> Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 70b3e128aef631e18e6451362c2e6315c28b857e
> CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
> Locale: en-AU (en_AU.UTF-8); UI: en-US
> Calc: CL threaded

(In reply to Stéphane Guillou (stragu) from comment #4)
> Created attachment 195104 [details]
> screenshot of issue in LO 25.2

Bibisected with linux-64-7.4 to 18361b38c1d94d21f5041f3f36458edb260d339e
Resolves: tdf#149858 embedded starmath not using correct initial zoom
Comment 6 Caolán McNamara 2024-08-16 20:13:28 UTC
I think that specific commit isn't it the fundamental problem, because before that the equation isn't scaled so draws at 100% inside the 140% allocated area. Problem probably arises since the earlier commit that one references.
Comment 7 Commit Notification 2024-08-17 13:16:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ddec502caa272b9e19872329ed5c5cd2fe3f40eb

tdf#160459 embedded starmath doesn't fit inside allocated area

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2024-08-17 16:57:12 UTC
Verified, thanks

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 25b61215ca91ec474c46f5ab8af067b4568f0bf9
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 9 Commit Notification 2024-08-18 01:19:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/3cada6586511aecaf7f8fbf4d36c8d23dfc5d6f1

tdf#160459 embedded starmath doesn't fit inside allocated area

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.