tdf#160459 embedded starmath doesn't fit inside allocated area

much to and fro with MapModes and rounding issue obscured that
fundmentally that the 'etched-out' GtkScrolledWindow frame requires
space which eats into what is available to show the formula, and
in embedded mode we want the editing area to be equal in size
to the area used for the preview.

Change-Id: I1d126ddcc953131cf4add7da58ccd89e7fa86b66
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171985
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>